python3.13 (3.13.0~b2-1) UNRELEASED; urgency=medium

  [ Matthias Klose ]
  * Configure without --with-dtrace on the Hurd.

  [ Stefano Rivera ]
  * Python 3.13.0 beta 2 snapshot.
  * Bump watch file to 3.13.

 -- Matthias Klose <doko@debian.org>  Wed, 15 May 2024 13:52:46 +0200

python3.13 (3.13.0~b1-2) unstable; urgency=medium

  * Configure --with-system-libmpdec=no.

 -- Matthias Klose <doko@debian.org>  Wed, 15 May 2024 12:13:44 +0200

python3.13 (3.13.0~b1-1) unstable; urgency=medium

  * Python 3.13.0 beta 1 snapshot.
  * Update symbols files.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Wed, 15 May 2024 08:57:29 +0200

python3.13 (3.13.0~a6-1) experimental; urgency=medium

  * Python 3.13.0 alpha 6 snapshot.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Wed, 01 May 2024 07:51:20 +0200

python3.12 (3.12.3-1) unstable; urgency=medium

  * Python 3.12.3 release.

 -- Matthias Klose <doko@debian.org>  Wed, 10 Apr 2024 07:33:47 +0200

python3.12 (3.12.2-5) unstable; urgency=medium

  * Update to the 3.12 branch 2024-02-02.
    - Make C API compatible with ISO C90 (GH-116950). Closes: #1064028.
    - Upstream patch for GH-115874.
    - Still identify as "3.12.2", because "3.12.2+" is mis-treated by some
      third-party packages.
  * Use CFLAGS_NODIST, LDFLAGS_NODIST for passing build flags.
  * d/rules: Move configure/build targets for each build together.
  * Drop ffi configure options, obsolete.
  * Re-enable PGO/LTO builds.

 -- Matthias Klose <doko@debian.org>  Tue, 02 Apr 2024 16:53:02 +0200

python3.12 (3.12.2-4) unstable; urgency=medium

  [ Stefano Rivera ]
  * Build-Depend on libnsl-dev for NIS support. Closes: #1065128.

  [ Matthias Klose ]
  * Fix override files for renamed t64 packages.
  * Fix package names in PVER-dbg maintainer scripts. Addresses: #1065164.
  * Really build without LTO when requested.
  * Disable LTO builds and testsuite for now (mesa t64 transition ...).
