@@ -7,7 +7,7 @@ Forwarded: no
 
 --- a/Lib/sysconfig/__init__.py
 +++ b/Lib/sysconfig/__init__.py
-@@ -522,6 +522,12 @@ def _init_config_vars():
+@@ -522,6 +522,12 @@
          # the init-function.
          _CONFIG_VARS['userbase'] = _getuserbase()
  
@@ -22,7 +22,7 @@ Forwarded: no
      if os.name == 'posix':
 --- a/Makefile.pre.in
 +++ b/Makefile.pre.in
-@@ -1713,6 +1713,7 @@ Python/interpconfig.o: $(srcdir)/Python/
+@@ -1715,6 +1715,7 @@
  
  Python/dynload_shlib.o: $(srcdir)/Python/dynload_shlib.c Makefile
  	$(CC) -c $(PY_CORE_CFLAGS) \
