@@ -7,7 +7,7 @@ Forwarded: no
 
 --- a/Lib/sysconfig/__init__.py
 +++ b/Lib/sysconfig/__init__.py
-@@ -368,7 +368,7 @@ def _get_sysconfigdata_name():
+@@ -368,7 +368,7 @@
      multiarch = getattr(sys.implementation, '_multiarch', '')
      return os.environ.get(
          '_PYTHON_SYSCONFIGDATA_NAME',
@@ -18,7 +18,7 @@ Forwarded: no
  def _init_posix(vars):
 --- a/Makefile.pre.in
 +++ b/Makefile.pre.in
-@@ -2568,8 +2568,10 @@ libinstall:	all $(srcdir)/Modules/xxmodu
+@@ -2572,8 +2572,10 @@
  			esac; \
  		done; \
  	done
@@ -33,7 +33,7 @@ Forwarded: no
  	-PYTHONPATH=$(DESTDIR)$(LIBDEST) $(RUNSHARED) \
 --- a/configure.ac
 +++ b/configure.ac
-@@ -164,7 +164,7 @@ AC_ARG_WITH([build-python],
+@@ -164,7 +164,7 @@
      dnl Build Python interpreter is used for regeneration and freezing.
      ac_cv_prog_PYTHON_FOR_REGEN=$with_build_python
      PYTHON_FOR_FREEZE="$with_build_python"
