@@ -5,6 +5,7 @@ python3.13 (3.13.0~b2-1) UNRELEASED; urgency=medium
 
   [ Stefano Rivera ]
   * Python 3.13.0 beta 2 snapshot.
+  * Refresh patches.
   * Bump watch file to 3.13.
 
  -- Matthias Klose <doko@debian.org>  Wed, 15 May 2024 13:52:46 +0200
